[gd_scene load_steps=12 format=3 uid="uid://c40ainbadxewg"]

[ext_resource type="Theme" uid="uid://cjnfw2l6vr8ob" path="res://resources/themes/default_font_tools.tres" id="1_5m5wi"]
[ext_resource type="Texture2D" uid="uid://fdgp0j4dwc17" path="res://art/ui/UI Window C.png" id="1_360lq"]
[ext_resource type="Script" path="res://z_tools/characters.gd" id="3_nws0a"]
[ext_resource type="Texture2D" uid="uid://rlpdloa7a2h0" path="res://art/icons/combat_indicator_0.png" id="3_qvha2"]
[ext_resource type="Texture2D" uid="uid://bwb1jexd5k73p" path="res://art/icons/combat_indicator_1.png" id="4_a22tk"]
[ext_resource type="Texture2D" uid="uid://cbrhwa8x25mwj" path="res://art/icons/combat_indicator_2.png" id="5_gyseq"]
[ext_resource type="Texture2D" uid="uid://bxyk5xo7fuf4u" path="res://art/icons/combat_indicator_3.png" id="6_agv8l"]
[ext_resource type="Texture2D" uid="uid://cq1d4fuxtdfpg" path="res://art/icons/combat_indicator_4.png" id="7_kyaoc"]
[ext_resource type="Texture2D" uid="uid://c123422ugvkc5" path="res://art/icons/combat_indicator_5.png" id="7_se20q"]
[ext_resource type="Theme" uid="uid://b4qn75pvlpxbw" path="res://resources/themes/black_button.tres" id="10_tiyls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wch6e"]

[node name="EntityDesigner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5m5wi")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_360lq")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TabContainer" type="TabContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wch6e")

[node name="Characters" type="MarginContainer" parent="NinePatchRect/MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("3_nws0a")

[node name="H" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters"]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filter" type="VBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchBar" type="LineEdit" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Right/Filter"]
layout_mode = 2
placeholder_text = "Search a Character ID"

[node name="CharacterList" type="ItemList" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Right/Filter"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.2

[node name="ID" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "ID"
horizontal_alignment = 2

[node name="ID" type="LineEdit" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/ID"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
placeholder_text = "jeff_pringles"

[node name="Name" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Name"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
placeholder_text = "Jeff Pringles"

[node name="Examine" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Examine"]
layout_mode = 2
size_flags_horizontal = 3
text = "Examine"
horizontal_alignment = 2

[node name="Examine" type="TextEdit" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Examine"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
placeholder_text = "Here is an explanation of the object"
wrap_mode = 1

[node name="Hidden" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Hidden"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hidden"
horizontal_alignment = 2

[node name="Hidden" type="CheckBox" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Hidden"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="CombatLevel" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/CombatLevel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Combat Level Tier"
horizontal_alignment = 2

[node name="CombatLevel" type="OptionButton" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/CombatLevel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
item_count = 6
selected = 0
popup/item_0/text = ""
popup/item_0/icon = ExtResource("3_qvha2")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("4_a22tk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("5_gyseq")
popup/item_2/id = 2
popup/item_3/text = ""
popup/item_3/icon = ExtResource("6_agv8l")
popup/item_3/id = 3
popup/item_4/text = ""
popup/item_4/icon = ExtResource("7_kyaoc")
popup/item_4/id = 4
popup/item_5/text = ""
popup/item_5/icon = ExtResource("7_se20q")
popup/item_5/id = 5

[node name="Options" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Interact Options"
horizontal_alignment = 2

[node name="Options" type="ItemList" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Options"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
select_mode = 1
allow_rmb_select = true
item_count = 7
item_0/text = "Attack"
item_1/text = "Talk"
item_2/text = "Trade"
item_3/text = "Pickpocket"
item_4/text = "Task"
item_5/text = "Teleport"
item_6/text = "Rewards"

[node name="Spacer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 30
alignment = 2

[node name="Save" type="Button" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("10_tiyls")
text = "Save"

[node name="Delete" type="Button" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("10_tiyls")
text = "Delete"

[node name="M" type="MarginContainer" parent="NinePatchRect/MarginContainer/TabContainer/Characters/H"]
layout_mode = 2
theme_override_constants/margin_right = 24

[connection signal="text_changed" from="NinePatchRect/MarginContainer/TabContainer/Characters/H/Right/Filter/SearchBar" to="NinePatchRect/MarginContainer/TabContainer/Characters" method="on_search_bar_text_changed"]
[connection signal="item_clicked" from="NinePatchRect/MarginContainer/TabContainer/Characters/H/Right/Filter/CharacterList" to="NinePatchRect/MarginContainer/TabContainer/Characters" method="on_character_list_item_clicked"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Buttons/Save" to="NinePatchRect/MarginContainer/TabContainer/Characters" method="save_character"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/TabContainer/Characters/H/Left/Buttons/Delete" to="NinePatchRect/MarginContainer/TabContainer/Characters" method="delete"]
